Simplify: Adopt reusable workflow for autofixer
Migrated from composite action to reusable workflow pattern:

✨ Improvements:
- Single job call instead of multi-step checkout process
- No manual checkout of private action repository needed
- Cleaner, more maintainable workflow (42 lines → 26 lines)
- Standard GitHub reusable workflow pattern

🔧 Changes:
- Updated test-autofixer.yml to use the new reusable workflow
- Reference: Princetopia/claude-security-autofixer/.github/workflows/fix-vulnerability.yml@main

🎯 Benefits:
- Simpler integration (38% fewer lines)
- More intuitive workflow structure
- Better separation of concerns
- Professional GitHub Actions best practices

This aligns with the v3 refactor of the autofixer repository.

--- a/.github/workflows/test-autofixer.yml
+++ b/.github/workflows/test-autofixer.yml
@@ -15,27 +15,11 @@ permissions:
 
 jobs:
   fix-vulnerability:
-    name: Fix Security Alert
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      with:
-        token: ${{ secrets.GH_PAT }}
-    
-    - name: Checkout private action
-      uses: actions/checkout@v4
-      with:
-        repository: Princetopia/claude-security-autofixer
-        token: ${{ secrets.GH_PAT }}
-        path: .github/actions/claude-security-autofixer
-    
-    - name: Run Claude Security Autofixer
-      uses: ./.github/actions/claude-security-autofixer
-      with:
-        alert-number: ${{ github.event.inputs.alert-number }}
-        github-token: ${{ secrets.GH_PAT }}
-        anthropic-api-key: ${{ secrets.ANTHROPIC_API_KEY }}
-        base-ref: main
+    uses: Princetopia/claude-security-autofixer/.github/workflows/fix-vulnerability.yml@main
+    with:
+      alert-number: ${{ inputs.alert-number }}
+      base-ref: main
+    secrets:
+      github-token: ${{ secrets.GH_PAT }}
+      anthropic-api-key: ${{ secrets.ANTHROPIC_API_KEY }}
 
