Fix alert-number input type to match reusable workflow
- Change from string to number to match fix-vulnerability.yml

--- a/.github/workflows/test-autofixer.yml
+++ b/.github/workflows/test-autofixer.yml
@@ -6,7 +6,7 @@ on:
       alert-number:
         description: 'Security alert number to fix'
         required: true
-        type: string
+        type: number
 
 permissions:
   contents: write
