--- a/.github/workflows/test-autofixer.yml
+++ b/.github/workflows/test-autofixer.yml
@@ -6,7 +6,7 @@ on:
       alert-number:
         description: 'Security alert number to fix'
         required: true
-        type: number
+        type: string
 
 permissions:
   contents: write
